# talk-godot-gdnative

./: .gitignore  Dialog.gd  Dialog.tscn  MainCharacter.gd  MainCharacter.tscn  MainScene.gd  MainScene.tscn  Map.tscn  README.md  door.png.import  project.godot
.import/: door.png-4ad4ab0c545155655bbef277d86eb152.md5  door.png-4ad4ab0c545155655bbef277d86eb152.stex  icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  sheet.png-b93731627d2f5b1030ad8028f44ebe69.md5
cpp/: CMakeLists.txt  conanfile.py
cpp/godot/: CMakeLists.txt  gdlibrary.cpp  godot-game-ia.gdnlib  godot-game-ia.gdns  godot_ia.cpp  godot_ia.h
cpp/lib/: CMakeLists.txt  ia.cpp  ia.h
docs/: index.html
godot/: Dialog.gd  Dialog.tscn  MainScene.gd  MainScene.tscn  MapTileset.tres
slides/reveal.js-3.8.0/: index.html
slides/reveal.js-3.8.0/css/: custom.css
